[package]
name = "git-head-name"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gix = {version = "0.53", default-features = false, features = ["max-performance-safe", "revision"]}
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
# clap = { version = "4.4", features = ["derive"] }
console = "0.15"
