[package]
name = "bash-git-status"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gix = {version = "0.58", default-features = false, features = ["max-performance-safe", "revision"]}
gix-features = { version = "0.38.0", optional = true }
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
# FIXME: 0.38.30 failed to build on loongarch64
# See: https://github.com/rust-lang/libc/pull/3551
rustix = { version = "=0.38.28", features = ["process"] }

[features]
default = ["gix-max-perf"]
# Enables most of the `max-performance` features of the `gix` module for better performance.
# This can be more difficult to build in some conditions and requires cmake.
gix-max-perf = ["gix-features/zlib-ng", "gix/fast-sha1"]
# Slower than `git-repository-max-perf`, but better than the default.
# Unlike `git-repository-max-perf` this does not require cmake and allows dynamic zlib linking.
gix-faster = ["gix-features/zlib-stock", "gix/fast-sha1"]
